tests/ui/g-role-out-of-range.stderr
error[E0080]: evaluation panicked: role index must be < 16
 --> $RUST/core/src/panic.rs
  |
  |         $crate::panicking::panic_display(&$arg);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::send::<16, 0, hibana::g::Msg<1, ()>>::{constant#0}` failed here
  |
 ::: src/g.rs
  |
  |             panic!("{}", ROLE_INDEX_ERROR);
  |             ------------------------------ in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  | /     const {
  | |         if FROM >= ROLE_DOMAIN_SIZE || TO >= ROLE_DOMAIN_SIZE {
  | |             panic!("{}", ROLE_INDEX_ERROR);
... |
  | |     }
  | |_____^

note: the above error was encountered while instantiating `fn send::<16, 0, Msg<1, ()>>`
 --> tests/ui/g-role-out-of-range.rs:4:13
  |
4 |     let _ = g::send::<16, 0, g::Msg<1, ()>>();
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
